--- a/template.css
+++ b/template.css
@@ -7,3 +7,12 @@ body {
 h1{
     text-align: center;
 }
+
+h2 {
+    text-decoration: underline;
+}
+
+main { 
+    display:flex;
+    margin : 15px;
+}
