--- a/template.css
+++ b/template.css
@@ -4,15 +4,23 @@ body {
     color: white;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
 h2 {
     text-decoration: underline;
+    text-align: center;
 }
 
 main { 
-    display:flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     margin : 15px;
+}
+
+section {
+    border: 2px white solid;
+    border-radius: 5px;
+    padding: 15px;
 }
