--- a/template.css
+++ b/template.css
@@ -23,4 +23,11 @@ section {
     border: 2px white solid;
     border-radius: 5px;
     padding: 15px;
+    margin: 8%;
+}
+
+@media only screen and (max-width: 730px) {
+    main {
+        grid-template-columns: 1fr;
+    }
 }
