--- a/template.css
+++ b/template.css
@@ -23,7 +23,7 @@ section {
     border: 2px white solid;
     border-radius: 5px;
     padding: 15px;
-    margin: 8%;
+    margin: 8px;
 }
 
 @media only screen and (max-width: 730px) {
