--- a/static/style.css
+++ b/static/style.css
@@ -34,6 +34,37 @@ section {
     background-color: rgb(95, 94, 94);
 }
 
+.list-process{
+    grid-column: 1/3;
+}
+
+.process-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    font-size: 0.9em;
+    
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+
+.process-table thead tr {
+    text-align: left;
+}
+
+.process-table th, .process-table td {
+    padding: 12px 15px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.medium-usage {
+    color: orange;
+}
+
+.high-usage {
+    color: #d32f2f;
+    font-weight: bold;
+}
+
 @media only screen and (max-width: 730px) {
     main {
         grid-template-columns: 1fr;
