--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,16 @@
+:root{
+    --background-color : rgb(57, 57, 57);
+    --block-color : rgb(95, 94, 94);
+}
+
 body {
-    background-color: rgb(57, 57, 57);
+    background-color: var(--background-color);
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
 header {
-    background-color: rgb(95, 94, 94);
+    background-color: var(--block-color);
     border-radius: 5px;
     padding: 5px;
     border: 2px white solid;
@@ -20,10 +25,10 @@ h2 {
     text-align: center;
 }
 
-main { 
+main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin : 15px;
+    margin: 15px;
 }
 
 section {
@@ -31,10 +36,10 @@ section {
     border-radius: 5px;
     padding: 15px;
     margin: 8px;
-    background-color: rgb(95, 94, 94);
+    background-color: var(--block-color);
 }
 
-.list-process{
+.list-process {
     grid-column: 1/3;
 }
 
@@ -43,7 +48,7 @@ section {
     border-collapse: collapse;
     margin-top: 15px;
     font-size: 0.9em;
-    
+
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
 
@@ -51,7 +56,8 @@ section {
     text-align: left;
 }
 
-.process-table th, .process-table td {
+.process-table th,
+.process-table td {
     padding: 12px 15px;
     border-bottom: 1px solid #dddddd;
 }
@@ -68,5 +74,9 @@ section {
 @media only screen and (max-width: 730px) {
     main {
         grid-template-columns: 1fr;
+    }
+
+    .list-process {
+    grid-column: 1/1;
     }
 }
