--- a/static/style.css
+++ b/static/style.css
@@ -45,13 +45,16 @@ section {
 
 .list-process {
     grid-column: 1/3;
+    overflow-x: auto; 
+    display: block;  
 }
 
 .process-table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
-    font-size: 0.9em;
+    border-collapse: collapse;
+    table-layout: fixed;
 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
 }
@@ -64,6 +67,13 @@ section {
 .process-table td {
     padding: 12px 15px;
     border-bottom: 1px solid #dddddd;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
+}
+
+.process-table th:nth-child(2), 
+.process-table td:nth-child(2) {
+    width: 40%; 
 }
 
 .medium-usage {
@@ -78,9 +88,20 @@ section {
 @media only screen and (max-width: 730px) {
     main {
         grid-template-columns: 1fr;
+        margin: 10px;
+    }
+
+    header {
+        margin: 10px;
+        margin-bottom: 0;
     }
 
     .list-process {
     grid-column: 1/1;
     }
+
+    .process-table {
+    width: auto;
+    }
+
 }
