Adjusted color palette

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 :root {
-    --background-color: rgb(57, 57, 57);
-    --block-color: rgb(95, 94, 94);
+    --background-color: #2a2e32;
+    --block-color: #51555a;
 }
 
 body {
