--- a/templates/template.html
+++ b/templates/template.html
@@ -66,11 +66,18 @@
             <div class="files-container">
                 <div class="pie-chart" style="background: conic-gradient({{ pie_chart_css_value }});"></div>
 
-                    <div class="legend">
+                <div class="legend">
                     <p><span style="color:blue">■</span> {{ txt_file_nb }} fichiers .txt</p>
                     <p><span style="color:green">■</span> {{ py_file_nb }} fichiers .py</p>
-                    <p><span style="color:yellow">■</span> {{ pdf_file_nb }} fichiers .pdf</pstyle=style=>
+                    <p><span style="color:yellow">■</span> {{ pdf_file_nb }} fichiers .pdf</p>
                     <p><span style="color:orange">■</span> {{ jpg_file_nb }} fichiers .jpg</p>
+                    <p><span style="color:purple">■</span> {{ png_file_nb }} fichiers .png</p>
+                    <p><span style="color:red">■</span> {{ docx_file_nb }} fichiers .docx</p>
+                    <p><span style="color:cyan">■</span> {{ xlsx_file_nb }} fichiers .xlsx</p>
+                    <p><span style="color:magenta">■</span> {{ pptx_file_nb }} fichiers .pptx</p>
+                    <p><span style="color:lime">■</span> {{ mp3_file_nb }} fichiers .mp3</p>
+                    <p><span style="color:pink">■</span> {{ mp4_file_nb }} fichiers .mp4</p>
+                    <p><span style="color:brown">■</span> {{ zip_file_nb }} fichiers .zip</p>
                 </div>
             </div>
         </section>
