Added per core CPU usage

--- a/static/style.css
+++ b/static/style.css
@@ -46,10 +46,15 @@ section {
     width: 100%;
 }
 
-.files-container {
+#progress_cores {
+    width: 80%;
+}
+
+.files-container,
+.cores_usage_elements {
     display: flex;
     justify-content: space-around;
-    align-items: center;   
+    align-items: center;
 }
 
 .pie-chart {
