--- a/templates/process.html
+++ b/templates/process.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <h1>Dashboard - {{ machine_name }} {{ heure }}</h1>
+        <h1>Dashboard - {{ machine_name }}</h1>
     </header>
     <main>
         <!-- Process list Section -->
