Rounded file size and added unit to web page

--- a/templates/template.html
+++ b/templates/template.html
@@ -89,17 +89,17 @@
                 <div class="pie-chart" style="background: conic-gradient({{ pie_chart_css_value }});"></div>
 
                 <div class="legend">
-                    <p><span style="color:blue">■</span> {{ txt_file_nb }} fichiers .txt | {{ txt_file_size }}</p>
-                    <p><span style="color:green">■</span> {{ py_file_nb }} fichiers .py | {{ py_file_size }}</p>
-                    <p><span style="color:yellow">■</span> {{ pdf_file_nb }} fichiers .pdf | {{ pdf_file_size }}</p>
-                    <p><span style="color:orange">■</span> {{ jpg_file_nb }} fichiers .jpg | {{ jpg_file_size }}</p>
-                    <p><span style="color:purple">■</span> {{ png_file_nb }} fichiers .png | {{ png_file_size }}</p>
-                    <p><span style="color:red">■</span> {{ docx_file_nb }} fichiers .docx | {{ docx_file_size }}</p>
-                    <p><span style="color:cyan">■</span> {{ xlsx_file_nb }} fichiers .xlsx | {{ xlsx_file_size }}</p>
-                    <p><span style="color:magenta">■</span> {{ pptx_file_nb }} fichiers .pptx | {{ pptx_file_size }}</p>
-                    <p><span style="color:lime">■</span> {{ mp3_file_nb }} fichiers .mp3 | {{ mp3_file_size }}</p>
-                    <p><span style="color:pink">■</span> {{ mp4_file_nb }} fichiers .mp4 | {{ mp4_file_size }}</p>
-                    <p><span style="color:brown">■</span> {{ zip_file_nb }} fichiers .zip | {{ zip_file_size }}</p>
+                    <p><span style="color:blue">■</span> {{ txt_file_nb }} fichiers .txt | {{ txt_file_size }} Mo</p>
+                    <p><span style="color:green">■</span> {{ py_file_nb }} fichiers .py | {{ py_file_size }} Mo</p>
+                    <p><span style="color:yellow">■</span> {{ pdf_file_nb }} fichiers .pdf | {{ pdf_file_size }} Mo</p>
+                    <p><span style="color:orange">■</span> {{ jpg_file_nb }} fichiers .jpg | {{ jpg_file_size }} Mo</p>
+                    <p><span style="color:purple">■</span> {{ png_file_nb }} fichiers .png | {{ png_file_size }} Mo</p>
+                    <p><span style="color:red">■</span> {{ docx_file_nb }} fichiers .docx | {{ docx_file_size }} Mo</p>
+                    <p><span style="color:cyan">■</span> {{ xlsx_file_nb }} fichiers .xlsx | {{ xlsx_file_size }} Mo</p>
+                    <p><span style="color:magenta">■</span> {{ pptx_file_nb }} fichiers .pptx | {{ pptx_file_size }} Mo</p>
+                    <p><span style="color:lime">■</span> {{ mp3_file_nb }} fichiers .mp3 | {{ mp3_file_size }} Mo</p>
+                    <p><span style="color:pink">■</span> {{ mp4_file_nb }} fichiers .mp4 | {{ mp4_file_size }} Mo</p>
+                    <p><span style="color:brown">■</span> {{ zip_file_nb }} fichiers .zip | {{ zip_file_size }} Mo</p>
                 </div>
             </div>
         </section>
